--- a/package.json
+++ b/package.json
@@ -21,11 +21,20 @@
   ],
   "dependencies": {
     "angular": "^1.6.6",
-    "cordova-plugin-camera": "^2.4.1"
+    "bootstrap": "^3.3.7",
+    "cordova-android": "~6.3.0",
+    "cordova-plugin-camera": "^2.4.1",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-whitelist": "^1.3.2"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-camera": {}
-    }
+      "cordova-plugin-camera": {},
+      "cordova-plugin-whitelist": {}
+    },
+    "platforms": [
+      "android",
+      "browser"
+    ]
   }
 }
