--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
   "dependencies": {
     "angular": "^1.6.6",
     "bootstrap": "^3.3.7",
-    "cordova-android": "~6.3.0",
+    "cordova-browser": "~5.0.1",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-whitelist": "^1.3.2"
+    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-android": "~6.3.0"
   },
   "cordova": {
     "plugins": {
@@ -33,8 +34,8 @@
       "cordova-plugin-whitelist": {}
     },
     "platforms": [
-      "android",
-      "browser"
+      "browser",
+      "android"
     ]
   }
 }
