--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
   ],
   "dependencies": {
     "angular": "^1.6.6",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
+    "cordova-android": "~6.3.0",
     "cordova-browser": "~5.0.1",
+    "cordova-plugin-browsersync": "^1.1.0",
     "cordova-plugin-camera": "^2.4.1",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-whitelist": "^1.3.2",
-    "cordova-android": "~6.3.0"
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5"
   },
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-browsersync": {}
     },
     "platforms": [
       "browser",
