--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   ],
   "dependencies": {
     "angular": "^1.6.6",
+    "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
     "cordova-android": "~6.3.0",
     "cordova-browser": "~5.0.1",
