--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "play"
   ],
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.10",
     "angular": "^1.6.6",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
