--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@uirouter/angularjs": "^1.0.10",
     "angular": "^1.6.6",
+    "angular-route": "^1.6.6",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^3.3.7",
     "cordova-android": "~6.3.0",
